--- a/website-cc.yaml
+++ b/website-cc.yaml
@@ -24,4 +24,4 @@ spec:
   hooks:
     sync:
       webhook:
-        url: http://192.168.1.103:8060/website
+        url: http://website-controller/sync
