--- a/website-controller.yaml
+++ b/website-controller.yaml
@@ -1,10 +1,14 @@
-kind: DaemonSet
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: website-controller
-  namespace:
+  namespace: meta-controller
   labels:
 spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: website-controller
   template:
     metadata:
       labels:
@@ -13,19 +17,20 @@ spec:
       containers:
       - name: nodejs
         # use 0.2 if you have nginx as ingress controller running in your cluster
-        image: kalise/k8s-website-controller:0.2
+        #image: kalise/k8s-website-controller:0.2
         # use 0.1 if you have traefik as ingress controller running in your cluster
-        #image: kalise/k8s-website-controller:0.1
+        image: kalise/k8s-website-controller:0.1
         ports:
         - name: http
+          containerPort: 8060
           protocol: TCP
-          containerPort: 80
+      restartPolicy: Always
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: website-controller
-  namespace:
+  namespace: meta-controller
   labels:
 spec:
   selector:
