--- a/meta-controller/meta-controller.yaml
+++ b/meta-controller/meta-controller.yaml
@@ -20,7 +20,7 @@ spec:
       serviceAccountName: meta-controller
       containers:
       - name: meta-controller
-        image: metacontroller/metacontroller:0.2
+        image: metacontroller/metacontroller:v0.3.1
         command: ["/usr/bin/metacontroller"]
         args:
         - --logtostderr
