--- a/webctl/web-crd.yaml
+++ b/webctl/web-crd.yaml
@@ -2,29 +2,31 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   # name must match the spec fields below, and be in the form: <plural>.<group>
-  name: websites.noverit.com
+  name: websites.applications.clastix.io
 spec:
   # either Namespaced or Cluster
   scope: Namespaced
   # group name to use for REST API: /apis/<group>/<version>
-  group: noverit.com
+  group: applications.clastix.io
   # multiple versions of the same API can be served at same type
   version: v1
   versions:
     - name: v1
       served: true
-      storage: true
+      storage: true      
   names:
     kind: Website
+    listKind: WebsiteList
     singular: website
     plural: websites
     shortNames:
     - ws
   subresources:
-    status:
+    status: {}
     scale:
       specReplicasPath: .spec.replicas
       statusReplicasPath: .status.replicas
+      labelSelectorPath: .status.labelSelector
   validation:
     # openAPIV3Schema is the schema for validating custom objects.
     openAPIV3Schema:
@@ -37,8 +39,6 @@ spec:
               type: string
             replicas:
               type: integer
-              minimum: 0
-              maximum: 9
   additionalPrinterColumns:
     - name: Desired
       type: integer
@@ -64,10 +64,6 @@ spec:
       type: date
       description: Creation timestamp
       JSONPath: .metadata.creationTimestamp
-    - name: gitRepo
-      type: string
-      description: The Git repo where config files are stored
-      JSONPath: .spec.gitRepo
     - name: Route
       type: string
       description: How the website is reachable from the external
